# ROS2-Reinforcement-Learning-Autonomous-Vehicle

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
car_vroom_vroom/: env_wrapper.py  ml_inference.py  ml_train.py  safety_node.py
config/: inference.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/car_vroom_vroom/lib/car_vroom_vroom/: ml_inference  ml_train
install/car_vroom_vroom/share/car_vroom_vroom/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/car_vroom_vroom/share/car_vroom_vroom/config/: training.yaml
install/car_vroom_vroom/share/car_vroom_vroom/launch/: training_launch.py
launch/: inference_launch.py
